syntax = "proto3";

package user;

option go_package = "/userpb;userpb";

service UserService {
  rpc BasicAccessAuth(BasicAuthRequest) returns (UserResponse);
  rpc GetByEmail(EmailRequest) returns (UserResponse);
}

// requests

message EmailRequest {
  string email = 1;
}

message BasicAuthRequest {
  string email = 1;
  string password = 2;
}

// responses

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}
